# office-runner

./: .gitlab-ci.yml  ChangeLog  Makefile.am  NEWS  README.md  TODO  TODO.md  autogen.sh  configure.ac  meson.build  office-runner.doap  org.gnome.OfficeRunner.json
.reuse/: dep5
data/: meson.build  org.gnome.OfficeRunner.appdata.xml.in
data/icons/: meson.build
data/sounds/: meson.build
data/ui/: meson.build
icons/16x16/: Makefile.am
icons/22x22/: Makefile.am
icons/24x24/: Makefile.am
icons/256x256/: Makefile.am
icons/32x32/: Makefile.am
icons/48x48/: Makefile.am
po/: LINGUAS  Makevars  POTFILES.in  bg.po  bs.po  cs.po  da.po  de.po  el.po  es.po  eu.po  fr.po  fur.po  hi.po  hr.po  hu.po  id.po  ka.po  kk.po  kw.po  meson.build  nl.po  oc.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sl.po  sr.po  sr@latin.po  sv.po  tr.po  uk.po  zh_CN.po
src/: Makefile.am  meson.build  office-runner.appdata.xml.in  office-runner.c  office-runner.desktop.in  office-runner.ui  org.gnome.OfficeRunner.appdata.xml.in  org.gnome.OfficeRunner.desktop.in
